messenger/include/dna/dna_engine.h


typedef struct dna_engine dna_engine_t;
typedef uint64_t dna_request_id_t;
DNA_API const char* dna_engine_error_string(int error);
typedef struct {
    char fingerprint[129];      
    char display_name[64];      
    char message[256];          
    uint64_t requested_at;      
    int status;                 
} dna_contact_request_t;
typedef struct {
    int id;                     
    char sender[129];           
    char recipient[129];        
    char *plaintext;            
    uint64_t timestamp;         
    bool is_outgoing;           
    int status;                 
    int message_type;           
    bool deleted_by_sender;     
    char content_hash[65];      
} dna_message_t;
typedef struct {
    char group_uuid[37];        
    char group_name[256];       
    char inviter[129];          
    int member_count;           
    uint64_t invited_at;        
} dna_invitation_t;
typedef struct {
    char author_fingerprint[129];   
    char author_name[65];           
    uint64_t timestamp;             
    bool verified;                  
} dna_wall_like_info_t;
typedef void (*dna_completion_cb)(
    dna_request_id_t request_id,
    int error,
    void *user_data
);
typedef void (*dna_identity_created_cb)(
    dna_request_id_t request_id,
    int error,
    const char *fingerprint,    
    void *user_data
);
typedef void (*dna_display_name_cb)(
    dna_request_id_t request_id,
    int error,
    const char *display_name,
    void *user_data
);
typedef enum {
    DNA_EVENT_DHT_CONNECTED,
    DNA_EVENT_DHT_DISCONNECTED,
    DNA_EVENT_MESSAGE_RECEIVED,
    DNA_EVENT_MESSAGE_SENT,
    DNA_EVENT_MESSAGE_DELIVERED,
    DNA_EVENT_MESSAGE_READ,
    DNA_EVENT_CONTACT_ONLINE,
    DNA_EVENT_CONTACT_OFFLINE,
    DNA_EVENT_GROUP_INVITATION_RECEIVED,
    DNA_EVENT_GROUP_MEMBER_JOINED,
    DNA_EVENT_GROUP_MEMBER_LEFT,
    DNA_EVENT_IDENTITY_LOADED,
    DNA_EVENT_CONTACT_REQUEST_RECEIVED,  
    DNA_EVENT_OUTBOX_UPDATED,            
    DNA_EVENT_GROUP_MESSAGE_RECEIVED,    
    DNA_EVENT_GROUPS_SYNCED,             
    DNA_EVENT_CONTACTS_SYNCED,           
    DNA_EVENT_GEKS_SYNCED,               
    DNA_EVENT_DHT_PUBLISH_COMPLETE,      
    DNA_EVENT_DHT_PUBLISH_FAILED,        
    DNA_EVENT_WALL_NEW_POST,             
    DNA_EVENT_CHANNEL_NEW_POST,          
    DNA_EVENT_CHANNEL_SUBS_SYNCED,       
    DNA_EVENT_MEDIA_UPLOAD_PROGRESS,     
    DNA_EVENT_ERROR
} dna_event_type_t;
typedef struct {
    dna_event_type_t type;
    union {
        struct {
            dna_message_t message;
        } message_received;
        struct {
            int message_id;
            int new_status;
            char recipient[129];  
        } message_status;
        struct {
            char fingerprint[129];
        } contact_status;
        struct {
            dna_invitation_t invitation;
        } group_invitation;
        struct {
            char group_uuid[37];
            char member[129];
        } group_member;
        struct {
            char fingerprint[129];
        } identity_loaded;
        struct {
            dna_contact_request_t request;
        } contact_request_received;
        struct {
            char contact_fingerprint[129];  
        } outbox_updated;
        struct {
            char recipient[129];            
            uint64_t seq_num;               
            uint64_t timestamp;             
        } message_delivered;
        struct {
            char group_uuid[37];            
            int new_count;                  
        } group_message;
        struct {
            int groups_restored;            
        } groups_synced;
        struct {
            int contacts_synced;            
        } contacts_synced;
        struct {
            int geks_synced;                
        } geks_synced;
        struct {
            uint64_t request_id;            
            char base_key[256];             
            int error_code;                 
        } dht_publish;
        struct {
            char author_fingerprint[129];   
            char post_uuid[37];             
        } wall_new_post;
        struct {
            char channel_uuid[37];
            char post_uuid[37];
            char author_fingerprint[129];
        } channel_new_post;
        struct {
            int subscriptions_synced;
        } channel_subs_synced;
        struct {
            uint64_t bytes_sent;
            uint64_t total_bytes;
            uint64_t request_id;            
        } media_upload_progress;
        struct {
            int code;
            char message[256];
        } error;
    } data;
} dna_event_t;
typedef void (*dna_event_cb)(const dna_event_t *event, void *user_data);
DNA_API dna_engine_t* dna_engine_create(const char *data_dir);
typedef void (*dna_engine_created_cb)(dna_engine_t *engine, int error, void *user_data);
DNA_API void dna_engine_create_async(
    const char *data_dir,
    dna_engine_created_cb callback,
    void *user_data,
    _Atomic bool *cancelled
);
DNA_API void dna_engine_set_event_callback(
    dna_engine_t *engine,
    dna_event_cb callback,
    void *user_data
);
DNA_API void dna_engine_destroy(dna_engine_t *engine);
DNA_API const char* dna_engine_get_fingerprint(dna_engine_t *engine);
DNA_API dna_request_id_t dna_engine_create_identity(
    dna_engine_t *engine,
    const char *name,
    const uint8_t signing_seed[32],
    const uint8_t encryption_seed[32],
    dna_identity_created_cb callback,
    void *user_data
);
DNA_API int dna_engine_create_identity_sync(
    dna_engine_t *engine,
    const char *name,
    const uint8_t signing_seed[32],
    const uint8_t encryption_seed[32],
    const uint8_t master_seed[64],
    const char *mnemonic,
    char fingerprint_out[129]
);
DNA_API int dna_engine_restore_identity_sync(
    dna_engine_t *engine,
    const uint8_t signing_seed[32],
    const uint8_t encryption_seed[32],
    const uint8_t master_seed[64],
    const char *mnemonic,
    char fingerprint_out[129]
);
DNA_API int dna_engine_delete_identity_sync(
    dna_engine_t *engine,
    const char *fingerprint
);
DNA_API bool dna_engine_has_identity(dna_engine_t *engine);
DNA_API int dna_engine_prepare_dht_from_mnemonic(dna_engine_t *engine, const char *mnemonic);
DNA_API dna_request_id_t dna_engine_load_identity(
    dna_engine_t *engine,
    const char *fingerprint,
    const char *password,
    dna_completion_cb callback,
    void *user_data
);
DNA_API bool dna_engine_is_identity_loaded(dna_engine_t *engine);
DNA_API bool dna_engine_is_transport_ready(dna_engine_t *engine);
DNA_API dna_request_id_t dna_engine_register_name(
    dna_engine_t *engine,
    const char *name,
    dna_completion_cb callback,
    void *user_data
);
DNA_API dna_request_id_t dna_engine_get_display_name(
    dna_engine_t *engine,
    const char *fingerprint,
    dna_display_name_cb callback,
    void *user_data
);
DNA_API int dna_engine_get_mnemonic(
    dna_engine_t *engine,
    char *mnemonic_out,
    size_t mnemonic_size
);
DNA_API void dna_engine_set_global(dna_engine_t *engine);
DNA_API dna_engine_t* dna_engine_get_global(void);