messenger/crypto/bip39/bip39.h

#define BIP39_WORDS_24  24  
#define BIP39_MAX_MNEMONIC_LENGTH 256
#define BIP39_SEED_SIZE 64  