messenger/dna_messenger_flutter/lib/ffi/dna_bindings.dart


typedef DnaWallLikesCbDart = void Function(
  int requestId,
  int error,
  Pointer<dna_wall_like_info_t> likes,
  int count,
  Pointer<Void> userData,
);

typedef DnaWallImageCbDart = void Function(
  int requestId,
  int error,
  Pointer<Utf8> imageJson,
  Pointer<Void> userData,
);

typedef DnaMediaUploadCbDart = void Function(
  int requestId,
  int error,
  Pointer<Uint8> contentHash,
  Pointer<Void> userData,
);

typedef DnaMediaDownloadCbDart = void Function(
  int requestId,
  int error,
  Pointer<Uint8> data,
  int dataLen,
  Pointer<Void> userData,
);

typedef DnaMediaExistsCbDart = void Function(
  int requestId,
  int error,
  bool exists,
  Pointer<Void> userData,
);

typedef DnaEventCbDart = void Function(
  Pointer<dna_event_t> event,
  Pointer<Void> userData,
);

// =============================================================================
// BIP39 CONSTANTS
// =============================================================================

const int BIP39_WORDS_24 = 24;
const int BIP39_MAX_MNEMONIC_LENGTH = 256;
const int BIP39_SEED_SIZE = 64;

// =============================================================================
// BINDINGS CLASS
// =============================================================================

class DnaBindings {
  final DynamicLibrary _lib;

  DnaBindings(this._lib);

  // ---------------------------------------------------------------------------
  // LIFECYCLE
  // ---------------------------------------------------------------------------

  late final _dna_engine_create = _lib.lookupFunction<
      Pointer<dna_engine_t> Function(Pointer<Utf8>),
      Pointer<dna_engine_t> Function(Pointer<Utf8>)>('dna_engine_create');

  Pointer<dna_engine_t> dna_engine_create(Pointer<Utf8> data_dir) {
    return _dna_engine_create(data_dir);
  }

  // v0.6.18: Async engine creation (non-blocking) with cancellation support
  late final _dna_engine_create_async = _lib.lookupFunction<
      Void Function(Pointer<Utf8>, Pointer<DnaEngineCreatedCb>, Pointer<Void>, Pointer<Bool>),
      void Function(Pointer<Utf8>, Pointer<DnaEngineCreatedCb>, Pointer<Void>, Pointer<Bool>)>('dna_engine_create_async');

  void dna_engine_create_async(
    Pointer<Utf8> data_dir,
    Pointer<DnaEngineCreatedCb> callback,
    Pointer<Void> user_data,
    Pointer<Bool> cancelled,
  ) {
    _dna_engine_create_async(data_dir, callback, user_data, cancelled);
  }

  late final _dna_engine_destroy = _lib.lookupFunction<
      Void Function(Pointer<dna_engine_t>),
      void Function(Pointer<dna_engine_t>)>('dna_engine_destroy');

  void dna_engine_destroy(Pointer<dna_engine_t> engine) {
    _dna_engine_destroy(engine);
  }

  // Global engine for seamless JNI/FFI handoff (Android v0.5.5+)
  late final _dna_engine_get_global = _lib.lookupFunction<
      Pointer<dna_engine_t> Function(),
      Pointer<dna_engine_t> Function()>('dna_engine_get_global');

  Pointer<dna_engine_t> dna_engine_get_global() {
    return _dna_engine_get_global();
  }

  late final _dna_engine_set_global = _lib.lookupFunction<
      Void Function(Pointer<dna_engine_t>),
      void Function(Pointer<dna_engine_t>)>('dna_engine_set_global');

  void dna_engine_set_global(Pointer<dna_engine_t> engine) {
    _dna_engine_set_global(engine);
  }

  // Android-only: Check if identity loaded (v0.5.5+)
  late final _dna_engine_is_identity_loaded = _lib.lookupFunction<
      Bool Function(Pointer<dna_engine_t>),
      bool Function(Pointer<dna_engine_t>)>('dna_engine_is_identity_loaded');

  bool dna_engine_is_identity_loaded(Pointer<dna_engine_t> engine) {
    return _dna_engine_is_identity_loaded(engine);
  }

  late final _dna_engine_is_transport_ready = _lib.lookupFunction<
      Bool Function(Pointer<dna_engine_t>),
      bool Function(Pointer<dna_engine_t>)>('dna_engine_is_transport_ready');

  bool dna_engine_is_transport_ready(Pointer<dna_engine_t> engine) {
    return _dna_engine_is_transport_ready(engine);
  }

  late final _dna_engine_set_event_callback = _lib.lookupFunction<
      Void Function(
          Pointer<dna_engine_t>, Pointer<DnaEventCb>, Pointer<Void>),
      void Function(Pointer<dna_engine_t>, Pointer<DnaEventCb>,
          Pointer<Void>)>('dna_engine_set_event_callback');

  void dna_engine_set_event_callback(
    Pointer<dna_engine_t> engine,
    Pointer<DnaEventCb> callback,
    Pointer<Void> user_data,
  ) {
    _dna_engine_set_event_callback(engine, callback, user_data);
  }

  late final _dna_engine_get_fingerprint = _lib.lookupFunction<
      Pointer<Utf8> Function(Pointer<dna_engine_t>),
      Pointer<Utf8> Function(Pointer<dna_engine_t>)>('dna_engine_get_fingerprint');

  Pointer<Utf8> dna_engine_get_fingerprint(Pointer<dna_engine_t> engine) {
    return _dna_engine_get_fingerprint(engine);
  }

  late final _dna_engine_error_string = _lib.lookupFunction<
      Pointer<Utf8> Function(Int32),
      Pointer<Utf8> Function(int)>('dna_engine_error_string');

  Pointer<Utf8> dna_engine_error_string(int error) {
    return _dna_engine_error_string(error);
  }

  // ---------------------------------------------------------------------------
  // IDENTITY
  // ---------------------------------------------------------------------------

  late final _dna_engine_list_identities = _lib.lookupFunction<
      Uint64 Function(
          Pointer<dna_engine_t>, Pointer<DnaIdentitiesCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<DnaIdentitiesCb>,
          Pointer<Void>)>('dna_engine_list_identities');

  int dna_engine_list_identities(
    Pointer<dna_engine_t> engine,
    Pointer<DnaIdentitiesCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_list_identities(engine, callback, user_data);
  }

  late final _dna_engine_create_identity = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Pointer<Uint8>, Pointer<Uint8>,
          Pointer<DnaIdentityCreatedCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<Uint8>, Pointer<Uint8>,
          Pointer<DnaIdentityCreatedCb>, Pointer<Void>)>('dna_engine_create_identity');

  int dna_engine_create_identity(
    Pointer<dna_engine_t> engine,
    Pointer<Uint8> signing_seed,
    Pointer<Uint8> encryption_seed,
    Pointer<DnaIdentityCreatedCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_create_identity(
        engine, signing_seed, encryption_seed, callback, user_data);
  }

  late final _dna_engine_create_identity_sync = _lib.lookupFunction<
      Int32 Function(Pointer<dna_engine_t>, Pointer<Utf8>, Pointer<Uint8>, Pointer<Uint8>,
          Pointer<Uint8>, Pointer<Utf8>, Pointer<Utf8>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>, Pointer<Uint8>, Pointer<Uint8>,
          Pointer<Uint8>, Pointer<Utf8>, Pointer<Utf8>)>('dna_engine_create_identity_sync');

  int dna_engine_create_identity_sync(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> name,
    Pointer<Uint8> signing_seed,
    Pointer<Uint8> encryption_seed,
    Pointer<Uint8> master_seed,
    Pointer<Utf8> mnemonic,
    Pointer<Utf8> fingerprint_out,
  ) {
    return _dna_engine_create_identity_sync(
        engine, name, signing_seed, encryption_seed, master_seed, mnemonic, fingerprint_out);
  }

  late final _dna_engine_restore_identity_sync = _lib.lookupFunction<
      Int32 Function(Pointer<dna_engine_t>, Pointer<Uint8>, Pointer<Uint8>,
          Pointer<Uint8>, Pointer<Utf8>, Pointer<Utf8>),
      int Function(Pointer<dna_engine_t>, Pointer<Uint8>, Pointer<Uint8>,
          Pointer<Uint8>, Pointer<Utf8>, Pointer<Utf8>)>('dna_engine_restore_identity_sync');

  int dna_engine_restore_identity_sync(
    Pointer<dna_engine_t> engine,
    Pointer<Uint8> signing_seed,
    Pointer<Uint8> encryption_seed,
    Pointer<Uint8> master_seed,
    Pointer<Utf8> mnemonic,
    Pointer<Utf8> fingerprint_out,
  ) {
    return _dna_engine_restore_identity_sync(
        engine, signing_seed, encryption_seed, master_seed, mnemonic, fingerprint_out);
  }

  late final _dna_engine_delete_identity_sync = _lib.lookupFunction<
      Int32 Function(Pointer<dna_engine_t>, Pointer<Utf8>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>)>('dna_engine_delete_identity_sync');

  /// Delete identity and all associated local data
  /// Returns 0 on success, negative error code on failure
  int dna_engine_delete_identity_sync(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> fingerprint,
  ) {
    return _dna_engine_delete_identity_sync(engine, fingerprint);
  }

  late final _dna_engine_has_identity = _lib.lookupFunction<
      Bool Function(Pointer<dna_engine_t>),
      bool Function(Pointer<dna_engine_t>)>('dna_engine_has_identity');

  /// Check if an identity exists (v0.3.0 single-user model)
  /// Returns true if keys/identity.dsa exists
  bool dna_engine_has_identity(Pointer<dna_engine_t> engine) {
    return _dna_engine_has_identity(engine);
  }

  late final _dna_engine_prepare_dht_from_mnemonic = _lib.lookupFunction<
      Int32 Function(Pointer<dna_engine_t>, Pointer<Utf8>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>)>('dna_engine_prepare_dht_from_mnemonic');

  /// Prepare DHT connection from mnemonic (before identity creation)
  /// Call this when user validates seed phrase, before creating identity
  int dna_engine_prepare_dht_from_mnemonic(Pointer<dna_engine_t> engine, Pointer<Utf8> mnemonic) {
    return _dna_engine_prepare_dht_from_mnemonic(engine, mnemonic);
  }

  late final _dna_engine_load_identity = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Pointer<Utf8>, Pointer<Utf8>,
          Pointer<DnaCompletionCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>, Pointer<Utf8>,
          Pointer<DnaCompletionCb>, Pointer<Void>)>('dna_engine_load_identity');

  int dna_engine_load_identity(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> fingerprint,
    Pointer<Utf8> password,
    Pointer<DnaCompletionCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_load_identity(engine, fingerprint, password, callback, user_data);
  }

  late final _dna_engine_get_mnemonic = _lib.lookupFunction<
      Int32 Function(Pointer<dna_engine_t>, Pointer<Utf8>, Size),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>, int)>('dna_engine_get_mnemonic');

  /// Get the encrypted mnemonic (recovery phrase) for the current identity
  /// Returns 0 on success, negative error code on failure
  int dna_engine_get_mnemonic(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> mnemonic_out,
    int mnemonic_size,
  ) {
    return _dna_engine_get_mnemonic(engine, mnemonic_out, mnemonic_size);
  }

  late final _dna_engine_register_name = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaCompletionCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaCompletionCb>, Pointer<Void>)>('dna_engine_register_name');

  int dna_engine_register_name(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> name,
    Pointer<DnaCompletionCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_register_name(engine, name, callback, user_data);
  }

  late final _dna_engine_get_display_name = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaDisplayNameCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaDisplayNameCb>, Pointer<Void>)>('dna_engine_get_display_name');

  int dna_engine_get_display_name(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> fingerprint,
    Pointer<DnaDisplayNameCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_get_display_name(engine, fingerprint, callback, user_data);
  }
